
 $LastChangedDate$
 $Rev$


0.5.1
  * replaced fixed dimensions in GUI with layouts, should look better.
  * added ability to detect un-documented feature bit settings.
  * drobopro support added (thanks to lemonizer on the google group!)
  * ddiag.c becomes drobom diagprint
  * catlee fixes the packagin again. 

0.5.0 2009/01/30
  * replaced DroboDMP C extension by DroboIOctl python class.  no need
    for architecture dependent packages. this also means you can just 
    try it out straight after download, no need to install anything.
    much easier. fewer build dependencies as well.
  * device detection completely re-written.  It works better now.
  * Now displays mount points where it makes sense to do so.
  * status command output better/different. shows all devices and mount points
    for each drobo.
  * full Multiple LUN support.    should do what is expected.
  * full multiple Drobo support.  should do what is expected.
  * added modular info printing with csv list of outputs.
  * firmware 1.3.0, has enabled formerly broken functionality which
    name makes the sync command rename every drobo to 'hi there'.
    fixed.
  * added 'name' command, to name Drobo. (functionality of Sync)
  * corrected detection logic, which depended on formerly immutable name. 
    (affects fw >= 1.3.0) now use same mechanisms as sg_scan from sg3_utils.
  * documentation moved into restructured text. now shows up on the web.
    web site and documntation now consistent.

0.4.0 Release: 2008/12/28
  * IMPORTANT: firmware 1.3.0 support added.  Earlier drobo-utils 
     versions will not recognize a drobo running 1.3.0 or later.
  * CLI is more normal...  use getopts (got rid of device as fixed place arg.)
     now allows command to be an option as well.  
  * Changed DEBUG from a flag requiring code modification, to a bitmap
     honored as a command-line argument (--verbose)
  * misc. improvements in documentation.